[TASK-0026] try to fix touch selection problem on iphone

--- a/src/components/Calendar/components/CalendarMonth/CalendarMonth.module.scss
+++ b/src/components/Calendar/components/CalendarMonth/CalendarMonth.module.scss
@@ -28,8 +28,10 @@
 
 @media (min-width: 768px) {
   .calendarMonth {
+    margin-bottom: $spacer-4;
+
     .heading {
-      padding-bottom: $spacer-8;
+      padding-bottom: $spacer-4;
       padding-top: $spacer-4;
       margin-bottom: $spacer-2;
       font-size: 1.25rem;
